; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/lasat/extr_interrupt.c_get_int_status_200.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/lasat/extr_interrupt.c_get_int_status_200.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lasat_int_status = common dso_local global i64* null, align 8
@LASATINT_MASK_SHIFT_200 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @get_int_status_200 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_int_status_200() #0 {
  %1 = alloca i64, align 8
  %2 = load i64*, i64** @lasat_int_status, align 8
  %3 = load i64, i64* %2, align 8
  store i64 %3, i64* %1, align 8
  %4 = load i64, i64* %1, align 8
  %5 = load i64, i64* @LASATINT_MASK_SHIFT_200, align 8
  %6 = lshr i64 %4, %5
  %7 = and i64 %6, 65535
  %8 = load i64, i64* %1, align 8
  %9 = and i64 %8, %7
  store i64 %9, i64* %1, align 8
  %10 = load i64, i64* %1, align 8
  ret i64 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
